<resources xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation,ExtraTranslation"
    >
    <string name="ignore_cache">Ignore app cache</string>
    <string name="flasher_only_desc1">You will be able to restore the backup <b>ONLY</b> using the <b>Migrate Flasher</b> app.</string>
    <string name="flasher_only_desc2"><b>You will not be able to flash the backup using TWRP!!</b></string>
    <string name="get_on_google_play">Get on Google Play</string>
    <string name="flasher_only_head">Only for Migrate Flasher users!</string>
    <string name="dont_show_again">Don\'t show again</string>
    <string name="aboutThisApp">About this app</string>
    <string name="about">About</string>
    <string name="help">Help</string>
    <string name="app_intro">App intro</string>
    <string name="changelog">Changelog</string>
    <string name="lastLog">Last logs</string>
    <string name="rateTheApp">Rate the app</string>
    <string name="xda_thread">XDA thread</string>
    <string name="other_options">Other options</string>
    <string name="other_apps">Other apps</string>
    <string name="contact">Contact via Telegram</string>
    <string name="older_builds">Older builds on AFH</string>
    <string name="q1">What is the Perm label in app backup?</string>
    <string name="a1"><i>Perm</i> means permissions of an app. Migrate can backup the granular permissions granted to an app for Android Marshmallow (6.0) and above.\n
    Selecting the option will allow you to restore the app permissions when the app is restored.
    </string>
    <string name="q2">How is this app different from Titanium Backup?</string>
    <string name="a2">This app is a ROM migration tool. This app can:\n
        \u2022 Combines all app and data to TWRP flashable zip\n
        \u2022 Backup different extras like contacts, sms, call logs etc\n
        \u2022 Higher portability because you have to carry only few zip files\n
        \u2022 Backups, if needed, can be flashed on another device.\n
    </string>
    <string name="q3">But why not use nandroid backup instead?</string>
    <string name="a3">Nandroid backup is the safest backup option available. However you cannot restore apps from one nandroid backup to a new ROM.\n
    This app is necessarily a ROM migration tool. Nandroid backup cannot do that job.
    </string>
    <string name="q4">Why can\'t all the apps and data be restored from the recovery itself?</string>
    <string name="a4">Recovery is a different environment from Android OS. Imaging installing a Windows game from a Linux distro.\n\n
    So a helper app is injected into the system partition, which fires up on system boot. It takes root permission and automatically restores app and data.
    </string>
    <string name="q5">Do I need to download the Migrate app from Play Store to restore the backup zip?</string>
    <string name="a5">
        Absolutely not!\n\n
        All you need is TWRP recovery and that your new ROM be rooted. While flashing backup zip, a helper app is injected into system, which takes up the app restore process.
    </string>
    <string name="q6">Is TWRP necessary? Can\'t I restore backup without it?</string>
    <string name="a6">
        TWRP recovery is needed to flash the backup zip. Without that, you cannot restore a backup. Other recoveries may work, but is not tested.\n\n
        Currently Migrate does not support restoring zips from the app itself. But that is something which can be added in future.
    </string>
    <string name="more_questions">More questions? Feel free to contact on Telegram</string>
    <string name="disable_battery_optimisation">Disable battery optimisation</string>
    <string name="use_new_sizing_method">Use new method to calculate size</string>
    <string name="use_new_sizing_method_desc">Enabling this uses StorageStats in Android 8.0+ Disabling this uses terminal shell commands to calculate size.</string>
    <string name="autoselect_extras_title">Auto-select extras</string>
    <string name="autoselect_extras_desc">This will automatically select extras like contacts and sms if you had previously backed them up</string>
    <string name="new_icon_method_title">New icon method</string>
    <string name="new_icon_method_desc">Use png format to save icons. Else the old .icon format will be used.</string>
    <string name="tar_gz_integrity_title">tar.gz integerity check</string>
    <string name="tar_gz_integrity_desc">Check integrity of data backup of each app stored as a tar.gz file</string>
    <string name="sms_verify_title">SMS verification</string>
    <string name="sms_verify_desc">Check integrity of SMS database file stored in the backup</string>
    <string name="calls_verify_title">Call logs verification</string>
    <string name="calls_verify_desc">Check integrity of call logs database file stored in the backup</string>
    <string name="perform_system_check_title">Perform system check</string>
    <string name="perform_system_check_desc">This will perform a basic apk copy and data copy (of this app itself) via Su shell before each backup. Thus checking if backup of other apps will be successful or not.</string>
    <string name="separate_extras_title">Separate extras backup</string>
    <string name="force_separate_extras">Force separate extras</string>
    <string name="force_separate_extras_desc">Extras will be backed up separately even for small backups</string>
    <string name="separate_extras_desc">Store extras (contacts, sms etc) as a standalone zip file and apps in separate zip files. Applicable only for backups having more than 1 part.</string>
    <string name="delete_error_backup_title">Delete backup with errors</string>
    <string name="delete_error_backup_desc">Delete backup zip file if it finished with errors or was corrupted while backup.</string>
    <string name="zip_verification_title">Zip integrity check</string>
    <string name="zip_verification_desc">Verify if backup zips are corrupted and within the flashable memory constraints of the device.\nHIGHLY RECOMMENDED</string>
    <string name="advanced">Advanced</string>
    <string name="use_su_for_keyboard_title">Use Su shell to read keyboard</string>
    <string name="use_su_for_keyboard_desc">Root shell will be used to read active keyboards in Extra backups</string>
    <string name="ignore_cache_desc">Ignores the cache directory of apps while backup, thus backups get very small. Although usually safe, you might lose some data of the app.</string>
    <string name="use_file_list_in_zip_verification">Use fileList.txt in zip verification</string>
    <string name="use_file_list_in_zip_verification_desc">Migrate maintains a list of files it has backed up in a file \"fileList.txt\" inside the backup zip. This option will make zip verification engine compare the files present in the zip and entries in this file.</string>
    <string name="privacy_policy_header">Privacy policy</string>
    <string name="privacy_policy_desc">This is a formal-informal discussion regarding data privacy and Migrate, some things which users should be aware of.
    These are subject to change on future updates, as more features are added.</string>
    <string name="google_firebase">Google Firebase</string>
    <string name="google_firebase_desc">From v3.0 onwards on Google Play edition only, Migrate uses Firebase for crash analytics. No personal data of users is transmitted. Builds of Migrate-NG (available on XDA) do not have crash analytics anymore.</string>
    <string name="google_admob">Google Admob</string>
    <string name="google_admob_desc">Migrate has been using Google\'s Admob service to display Ads. That remains unchanged.</string>
    <string name="data_that_is_read">Data that is read by Migrate</string>
    <string name="data_that_is_read_desc">For app backup, the following data are read:\n
        1. List of installed packages\n
        2. Path to source apks\n
        3. Path to data directory\n
        4. Permissions used\n
        5. Installer package of apps\n
        Following are accessed using ROOT permission:\n
        1. Apks of apps (only stored)\n
        2. Private data of apps (compressed and stored)\n
        Apk content of apps are not analysed. Private data of apps are not analysed.\n\n

        For extra backups, the following are read, only after permission from user:\n
        1. Contacts data (stored as vcf file)\n
        2. SMS data (stored as a db file)\n
        3. Call logs (stored as a db file)\n
        4. Screen DPI, default keyboard, ADB state, Font scale\n
        5. Wifi store config file (Android 8.0+)\n\n

        All data read are stored locally on the device
    </string>
    <string name="what_is_shared">What is shared</string>
    <string name="what_is_shared_desc">
        Sharing in this context refers to voluntary reporting of app logs.\n\n
        On sharing logs, you agree to share (publicly, if on Telegram group):\n\n
        - Some internal file structure of apps. This (in most cases) does not contain personally identifiable sensitive information.\n
        - The backup name.\n
        - Some backup details like number of backup parts.\n
        - Device information like android version.\n\n
        Migrate highly respects privacy of users. As such logs generated during back up of contacts, sms and call logs are NOT RECORDED and not sharable.
        No intentional attempt is made to identify or make illicit use of personal data of users.\n\n
        In any case, you agree that neither the developer, nor is the app responsible for any unintentional breach of privacy.
        In case you feel that your logs may contain sensitive information, please don\'t share them.
        In case you have already shared, please request for their deletion as soon as possible.
    </string>
    <string name="what_is_intentional">What is \"No intentional attempt\"?</string>
    <string name="what_is_intentional_desc">
        As a developer, I want users to understand this point. Again, this is applicable only if you decide to share the logs.\n\n
        Migrate uses the linux \"tar\" utility to compress data files. As such, tar prints out file names it has processed, and this also helps to identify if there are any errors in the process. Contents of the files are not printed.\n\n
        Usually it is not possible to detect personally identifiable information from cryptic output of tar files.
        But in some rare cases, developers may not follow proper practices and place information on the file name itself.
        Example: a chat app storing chat preferences with a participant as a file with name as the phone number of the participant. In this case, tar will print the name of the file, thus exposing the phone number. This is just one example.\n\n
        Migrate cannot take responsibility of putting a custom filter for each of the millions of apps out there, fearing that they don\'t by mistake leak any information.\n\n
        Again this is a VERY rare case, and usually always goes unnoticed. This happened with previous versions of Migrate and I got suggestion from few users that this be known to everyone.\n
        You can continue to use Migrate as you have done.
    </string>
    <string name="avoid_unintentional_leak">I am still not convinced.</string>
    <string name="avoid_unintentional_leak_desc">
        As discussed previously, if you think your backup contains really sensitive data, please do not share logs. Nothing leaves your device if you do not voluntarily share logs.
        <b>However, also note that without logs it becomes nearly impossible to provide any kind of support.\n\n</b>
        Alternatively, you can choose to not share \"Progress log\". The \"Error log\" and other options are usually most important.
    </string>
    <string name="privacy_policy_footer">That\'s all. Enjoy using the app. Feel free to contact me on Telegram.\n- SayantanRC</string>
</resources>