<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/large_padding_width"
        android:background="@color/colorPrimary"
        >

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_back"
            android:background="@android:color/transparent"
            android:padding="@dimen/large_padding_width"
            android:foreground="?android:attr/selectableItemBackground"
            android:id="@+id/helpBackButton"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/help"
            android:padding="@dimen/small_padding_width"
            android:layout_toEndOf="@id/helpBackButton"
            android:layout_centerVertical="true"
            />


    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q1"
                android:padding="@dimen/large_padding_width"
                android:background="@color/colorPrimary"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/a1"
                android:padding="@dimen/large_padding_width"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q2"
                android:padding="@dimen/large_padding_width"
                android:background="@color/colorPrimary"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/a2"
                android:padding="@dimen/large_padding_width"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q3"
                android:padding="@dimen/large_padding_width"
                android:background="@color/colorPrimary"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/a3"
                android:padding="@dimen/large_padding_width"
                />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q4"
                android:padding="@dimen/large_padding_width"
                android:background="@color/colorPrimary"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/a4"
                android:padding="@dimen/large_padding_width"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q5"
                android:padding="@dimen/large_padding_width"
                android:background="@color/colorPrimary"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/a5"
                android:padding="@dimen/large_padding_width"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q6"
                android:padding="@dimen/large_padding_width"
                android:background="@color/colorPrimary"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/a6"
                android:padding="@dimen/large_padding_width"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/more_questions"
                android:id="@+id/more_questions_feedback"
                android:textAllCaps="false"
                />
        </LinearLayout>
    </ScrollView>



</LinearLayout>