<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/xlarge_padding_width"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/flasher_only_head"
        android:textAppearance="?android:attr/textAppearanceLarge"
        />

    <Space
        android:layout_width="wrap_content"
        android:layout_height="@dimen/xlarge_padding_width"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/flasher_only_desc1"/>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="@dimen/large_padding_width"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_on_google_play"
        android:backgroundTint="@color/colorButtons"
        android:id="@+id/get_flasher_button"/>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="@dimen/large_padding_width"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/flasher_only_desc2"/>

    <Space
        android:layout_width="wrap_content"
        android:layout_height="@dimen/large_padding_width"/>

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dont_show_again"
        android:id="@+id/flasher_warning_checkbox"/>

</LinearLayout>